--- a/lab-2/src/Components/css/Users.css
+++ b/lab-2/src/Components/css/Users.css
@@ -512,13 +512,13 @@ button, input, label {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
+    gap: 30px;
 
     justify-content: space-between;
 }
 
 .inputPic {
-    position: relative; /* Add this to establish a positioning context */
+    position: relative;
     width: 15em;
     height: 15em;
     overflow: hidden;
@@ -690,6 +690,31 @@ button, input, label {
     background-color: #5152F5;
     color: black;
     outline-offset: -2px;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    margin: auto;
+    width: fit-content;
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+
+.custom-file-upload-edit {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.file:hover {
+    cursor: pointer;
+    background-color: rgb(209, 160, 68);
 }
 
 @media only screen and (max-width: 1736px) {
