--- a/lab-2/src/Components/css/AdminPage.css
+++ b/lab-2/src/Components/css/AdminPage.css
@@ -181,6 +181,196 @@ li:hover {
     transition: transform 0.3s; 
 }
 
+.nadmin {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background-color: #F5FAFD;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.nadmin h1 {
+    font-size: 3em;
+}
+
+.nadmin p {
+    color: #021214;
+}
+
+.anMain {
+    margin: 5px 10px;
+}
+
+.anTitle {
+    background-color: var(--black);
+    padding: 10px 30px;
+    border-radius: 12px;
+    color: var(--white);
+}
+
+.anRow1 {
+    margin-top: 10px;
+    display: flex;
+    width: 100%;
+    height: 16em;
+   
+}
+
+.anUsers {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #434141;
+}
+
+.anUsers div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.anUsers div h1 {
+    font-size: 5em;
+}
+
+.anProd {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #434141;  
+
+}
+
+.anProd div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.anProd div h1 {
+    font-size: 5em;
+}
+
+.anRow2 {
+    display: flex;
+    height: 23em;
+    width: 100%;
+}
+
+.anData {
+    color: #434141;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 40%;
+    height: 100%;
+}
+
+.anFinance {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.anGraph {
+    width: 10%;
+    height: 100%;
+    background-color: rgb(146, 146, 146);
+    border-radius: 50px;
+    overflow: hidden;
+    display: flex;
+    align-items: end;
+}
+.anInGraph {
+    width: 100%;
+    background-color: rgb(53, 226, 177);
+    border-radius: 50px;
+    overflow: hidden;
+}
+
+.leg1 {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.leg1 .legBox {
+    height: 1em;
+    width: 1em;
+    background-color: rgb(146, 146, 146);
+}
+
+.leg2 {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.leg2 .legBox {
+    height: 1em;
+    width: 1em;
+    background-color: rgb(53, 226, 177);
+}
+
+.anGraph1 {
+    width: 10%;
+    height: 100%;
+    background-color: rgb(61, 103, 65);
+    border-radius: 50px;
+    overflow: hidden;
+    display: flex;
+    align-items: end;
+}
+.anInGraph1 {
+    width: 100%;
+    height: 20%;
+    background-color: rgb(199, 226, 48);
+    border-radius: 50px;
+    overflow: hidden;
+}
+
+.leg3 {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.leg3 .legBox {
+    height: 1em;
+    width: 1em;
+    background-color: rgb(61, 103, 65);
+}
+
+.leg4 {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.leg4 .legBox {
+    height: 1em;
+    width: 1em;
+    background-color: rgb(199, 226, 48);
+}
+
+
 @media only screen and (max-width: 1530px) {
     .pimage {
         width: 80px;
