--- a/lab-2/src/Components/css/Client.css
+++ b/lab-2/src/Components/css/Client.css
@@ -956,6 +956,24 @@ table{
     border-collapse: collapse;
 }
 
+.scss {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.scss h1 {
+    color: rgb(54, 211, 54);
+}
+
+.scss h3 {
+    color: #555;
+    margin-bottom: 10px;
+}
+
 .cart-info2 {
     width: 5em;
     height: 5em;
